Added feature calculator test

--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,9 @@
             <artifactId>primitive</artifactId>
             <version>1.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
     </dependencies>
 </project>
