--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <id>make-assembly</id>
@@ -142,6 +142,8 @@
         <license.licenseName>gpl_v2</license.licenseName>
         <license.copyrightOwners>Aidan O'Mara</license.copyrightOwners>
         <enforcer.skip>true</enforcer.skip>
+        <kotlin.compiler.incremental>false</kotlin.compiler.incremental>
+        <package-name>imagesurf</package-name>
     </properties>
 
     <developers>
@@ -203,6 +205,12 @@
             <artifactId>assertj-core</artifactId>
             <version>3.6.2</version>
             <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.8.0</version>
         </dependency>
     </dependencies>
 </project>
