--- a/pom.xml
+++ b/pom.xml
@@ -212,5 +212,10 @@
             <artifactId>commons-pool2</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>it.unimi.dsi</groupId>
+            <artifactId>dsiutils</artifactId>
+            <version>2.6.3</version>
+        </dependency>
     </dependencies>
 </project>
